--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -7,7 +7,7 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
-        {% block body %} {% endblock %}
+        {% block body %} Coucu c'est moi {% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
 </html>
